[gd_scene load_steps=6 format=3 uid="uid://c776xclvodes4"]

[ext_resource type="Theme" uid="uid://evv5alve252b" path="res://main/theme/theme.tres" id="1_0n28a"]
[ext_resource type="Script" path="res://main/world/ui/pause_menu/status_submenu/status_submenu.gd" id="1_cu4im"]
[ext_resource type="Texture2D" uid="uid://1bbhd85mjdb6" path="res://main/battle/fighter/ella/ella.png" id="3_8ad6c"]
[ext_resource type="PackedScene" uid="uid://bdir8ibmp15l2" path="res://main/world/ui/flicker/flicker.tscn" id="3_pohwk"]
[ext_resource type="AudioStream" uid="uid://b52h2qinfu6iw" path="res://main/theme/sound/cancel.tres" id="5_7wgnl"]

[node name="StatusSubmenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0n28a")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_cu4im")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Flicker" parent="PanelContainer" instance=ExtResource("3_pohwk")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="FighterNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "ella"

[node name="InfoLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
text = "stats"

[node name="StatPage" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatNameContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/StatPage"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="MaxHPLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 0.882353, 0.788235, 1)
text = "max HP"

[node name="MaxTPLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.670588, 0.486275, 0.494118, 1)
text = "max TP"

[node name="StrLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.329412, 0.301961, 0.415686, 1)
text = "str"

[node name="MagLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.207843, 0.258824, 0.352941, 1)
text = "mag"

[node name="DefLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.101961, 0.231373, 0.345098, 1)
text = "def"

[node name="LucLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.0431373, 0.176471, 0.278431, 1)
text = "luc"

[node name="StatValueContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/StatPage"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 1

[node name="MaxHPValLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "99"
horizontal_alignment = 2

[node name="MaxTPValLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "99"
horizontal_alignment = 2

[node name="StrValLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "99"
horizontal_alignment = 2

[node name="MagValLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "99"
horizontal_alignment = 2

[node name="DefValLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "99"
horizontal_alignment = 2

[node name="LucValLabel" type="Label" parent="PanelContainer/VBoxContainer/StatPage/StatValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "99"
horizontal_alignment = 2

[node name="FighterIcon" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("3_8ad6c")
stretch_mode = 2

[node name="CancelPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_7wgnl")
bus = &"UI Sound Effect"
